// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertToAvro allOf 1`] = `
Object {
  "doc": "Order model description",
  "fields": Array [
    Object {
      "name": "item",
      "type": Array [
        Object {
          "doc": "Order model description",
          "fields": Array [
            Object {
              "name": "name",
              "type": Array [
                "string",
                "null",
              ],
            },
          ],
          "name": "SupermodelIoDavidOrder",
          "type": "record",
        },
        "null",
      ],
    },
  ],
  "name": "SupermodelIoDavidOrder",
  "namespace": "io.supermodel.david",
  "type": "record",
}
`;

exports[`convertToAvro complex schema #2 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "athlete",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "clearance",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "comingSoonSignup",
      "type": Array [
        "float",
        "null",
      ],
    },
    Object {
      "name": "customizable",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "age",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "brand",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "campaign",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "color",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "defaultColor",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "gender",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "genderSub",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "hastag",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "maxQuantity",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "productDivision",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "productLine",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "productType",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "price",
      "type": Array [
        Object {
          "doc": "Price model description",
          "fields": Array [
            Object {
              "name": "standardPrice",
              "type": Array [
                "float",
                "null",
              ],
            },
            Object {
              "name": "standardPriceWithoutVAT",
              "type": Array [
                "float",
                "null",
              ],
            },
            Object {
              "name": "currentPrice",
              "type": Array [
                "float",
                "null",
              ],
            },
            Object {
              "name": "salesPrice",
              "type": Array [
                "float",
                "null",
              ],
            },
          ],
          "name": "SupermodelIoAdidasProductEcomPrice",
          "type": "record",
        },
        "null",
      ],
    },
    Object {
      "name": "sport",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "fitbarPosition",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "care",
      "type": Array [
        Object {
          "doc": "Care model description",
          "fields": Array [
            Object {
              "name": "bleachingInstruction",
              "type": Array [
                "string",
                "null",
              ],
            },
            Object {
              "name": "ironInstruction",
              "type": Array [
                "string",
                "null",
              ],
            },
            Object {
              "name": "dryCleanInstruction",
              "type": Array [
                "string",
                "null",
              ],
            },
            Object {
              "name": "dryInstruction",
              "type": Array [
                "string",
                "null",
              ],
            },
            Object {
              "name": "extraCareInstruction",
              "type": Array [
                "string",
                "null",
              ],
            },
          ],
          "name": "SupermodelIoAdidasProductEcomCare",
          "type": "record",
        },
        "null",
      ],
    },
    Object {
      "doc": "ISO 8601 Date",
      "name": "onlineFrom",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "doc": "ISO 8601 Date",
      "name": "onlineTo",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "doc": "ISO 8601 Date",
      "name": "previewTo",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "pdp",
      "type": Array [
        Object {
          "doc": "PDP model description",
          "fields": Array [
            Object {
              "name": "callout",
              "type": Array [
                "string",
                "null",
              ],
            },
            Object {
              "name": "content",
              "type": Array [
                "string",
                "null",
              ],
            },
            Object {
              "name": "model",
              "type": Array [
                "string",
                "null",
              ],
            },
          ],
          "name": "SupermodelIoAdidasProductEcomPDP",
          "type": "record",
        },
        "null",
      ],
    },
    Object {
      "name": "flashProduct",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "hypeProduct",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "personalizable",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "preorder",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "soldout",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "productFamily",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "productFilter",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "prodcutLine",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "sizeChart",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "teams",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "doc": "The 'Template' is used to identify if the inline or miadidas PDP template should be applied in the ecommerce frontend.",
      "name": "template",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "articleNumber",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "modelNumber",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "articleDescription",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "name",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "badge",
      "type": Array [
        Object {
          "fields": Array [
            Object {
              "name": "style",
              "type": Array [
                Object {
                  "name": "SupermodelIoAdidasProductEcomBadgeStyle",
                  "symbols": Array [
                    "new",
                    "preview",
                    "preorder",
                    "sales",
                    "customizable",
                    "soldout",
                  ],
                  "type": "enum",
                },
                "null",
              ],
            },
            Object {
              "name": "description",
              "type": Array [
                "string",
                "null",
              ],
            },
          ],
          "name": "SupermodelIoAdidasProductEcomBadge",
          "type": "record",
        },
        "null",
      ],
    },
    Object {
      "name": "assets",
      "type": Array [
        Object {
          "items": Object {
            "doc": "Digital Asset",
            "fields": Array [
              Object {
                "name": "assetType",
                "type": Object {
                  "name": "SupermodelIoAdidasProductAssetAssetType",
                  "symbols": Array [
                    "image",
                    "video",
                    "other",
                  ],
                  "type": "enum",
                },
              },
              Object {
                "name": "viewGroup",
                "type": "string",
              },
              Object {
                "name": "view",
                "type": "string",
              },
              Object {
                "name": "assetCategory",
                "type": "string",
              },
              Object {
                "name": "usageTerms",
                "type": Object {
                  "items": "string",
                  "type": "array",
                },
              },
              Object {
                "name": "assetHref",
                "type": "string",
              },
              Object {
                "name": "image",
                "type": Array [
                  Object {
                    "fields": Array [
                      Object {
                        "name": "style",
                        "type": Array [
                          "string",
                          "null",
                        ],
                      },
                      Object {
                        "name": "width",
                        "type": Array [
                          "int",
                          "null",
                        ],
                      },
                      Object {
                        "name": "height",
                        "type": Array [
                          "int",
                          "null",
                        ],
                      },
                      Object {
                        "name": "bgColor",
                        "type": Array [
                          "string",
                          "null",
                        ],
                      },
                      Object {
                        "name": "representation",
                        "type": Array [
                          "string",
                          "null",
                        ],
                      },
                    ],
                    "name": "SupermodelIoAdidasProductAssetImage",
                    "type": "record",
                  },
                  "null",
                ],
              },
              Object {
                "name": "video",
                "type": Array [
                  Object {
                    "fields": Array [
                      Object {
                        "name": "fileSize",
                        "type": Array [
                          "int",
                          "null",
                        ],
                      },
                    ],
                    "name": "SupermodelIoAdidasProductAssetVideo",
                    "type": "record",
                  },
                  "null",
                ],
              },
              Object {
                "name": "model",
                "type": Array [
                  Object {
                    "fields": Array [
                      Object {
                        "name": "waist",
                        "type": Array [
                          "string",
                          "null",
                        ],
                      },
                      Object {
                        "name": "chest",
                        "type": Array [
                          "string",
                          "null",
                        ],
                      },
                      Object {
                        "name": "height",
                        "type": Array [
                          "string",
                          "null",
                        ],
                      },
                      Object {
                        "name": "productSize",
                        "type": Array [
                          "string",
                          "null",
                        ],
                      },
                    ],
                    "name": "SupermodelIoAdidasProductAssetModel",
                    "type": "record",
                  },
                  "null",
                ],
              },
            ],
            "name": "SupermodelIoAdidasProductAsset",
            "type": "record",
          },
          "type": "array",
        },
        "null",
      ],
    },
    Object {
      "name": "colorVariants",
      "type": Array [
        Object {
          "items": "SupermodelIoAdidasProductEcomArticle",
          "type": "array",
        },
        "null",
      ],
    },
    Object {
      "name": "miadidas",
      "type": Array [
        Object {
          "items": "SupermodelIoAdidasProductEcomArticle",
          "type": "array",
        },
        "null",
      ],
    },
    Object {
      "name": "completeLook",
      "type": Array [
        Object {
          "items": "SupermodelIoAdidasProductEcomArticle",
          "type": "array",
        },
        "null",
      ],
    },
  ],
  "name": "SupermodelIoAdidasProductEcomArticle",
  "namespace": "io.supermodel.adidas.product.ecom",
  "type": "record",
}
`;

exports[`convertToAvro converts enum 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "volume",
      "type": Array [
        "float",
        "null",
      ],
    },
    Object {
      "name": "power",
      "type": Array [
        "int",
        "null",
      ],
    },
    Object {
      "name": "fuel",
      "type": Array [
        Object {
          "name": "SupermodelIoFactoryPartsEngineFuel",
          "symbols": Array [
            "gasoline",
            "diesel",
            "lpg",
            "cng",
          ],
          "type": "enum",
        },
        "null",
      ],
    },
  ],
  "name": "SupermodelIoFactoryPartsEngine",
  "namespace": "io.supermodel.factory.parts",
  "type": "record",
}
`;

exports[`convertToAvro converts inline object in property 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "type",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "weight",
      "type": Array [
        "int",
        "null",
      ],
    },
    Object {
      "name": "length",
      "type": Array [
        "float",
        "null",
      ],
    },
    Object {
      "name": "available",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "engine",
      "type": Array [
        Object {
          "fields": Array [
            Object {
              "name": "volume",
              "type": Array [
                "float",
                "null",
              ],
            },
            Object {
              "name": "power",
              "type": Array [
                "int",
                "null",
              ],
            },
          ],
          "name": "SupermodelIoFactoryCarEngine",
          "type": "record",
        },
        "null",
      ],
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro converts oneOf into union 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "engine",
      "type": Array [
        Array [
          Object {
            "fields": Array [
              Object {
                "name": "volume",
                "type": Array [
                  "float",
                  "null",
                ],
              },
              Object {
                "name": "power",
                "type": Array [
                  "int",
                  "null",
                ],
              },
            ],
            "name": "SupermodelIoFactoryPartsEngine",
            "type": "record",
          },
          Object {
            "fields": Array [
              Object {
                "name": "gears",
                "type": Array [
                  "float",
                  "null",
                ],
              },
            ],
            "name": "SupermodelIoFactoryPartsTransmission",
            "type": "record",
          },
        ],
        "null",
      ],
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro converts required property 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "name": "type",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "weight",
      "type": Array [
        "int",
        "null",
      ],
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": Array [
        "boolean",
        "null",
      ],
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by #/ 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "type",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "weight",
      "type": Array [
        "int",
        "null",
      ],
    },
    Object {
      "name": "length",
      "type": Array [
        "float",
        "null",
      ],
    },
    Object {
      "name": "available",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "engine",
      "type": Array [
        Object {
          "fields": Array [
            Object {
              "name": "volume",
              "type": Array [
                "float",
                "null",
              ],
            },
            Object {
              "name": "power",
              "type": Array [
                "int",
                "null",
              ],
            },
          ],
          "name": "SupermodelIoFactoryPartsEngine",
          "type": "record",
        },
        "null",
      ],
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by id 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "type",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "weight",
      "type": Array [
        "int",
        "null",
      ],
    },
    Object {
      "name": "length",
      "type": Array [
        "float",
        "null",
      ],
    },
    Object {
      "name": "available",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "engine",
      "type": Array [
        Object {
          "fields": Array [
            Object {
              "name": "volume",
              "type": Array [
                "float",
                "null",
              ],
            },
            Object {
              "name": "power",
              "type": Array [
                "int",
                "null",
              ],
            },
          ],
          "name": "SupermodelIoFactoryPartsEngine",
          "type": "record",
        },
        "null",
      ],
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by relative path 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "type",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "weight",
      "type": Array [
        "int",
        "null",
      ],
    },
    Object {
      "name": "length",
      "type": Array [
        "float",
        "null",
      ],
    },
    Object {
      "name": "available",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "engine",
      "type": Array [
        Object {
          "fields": Array [
            Object {
              "name": "volume",
              "type": Array [
                "float",
                "null",
              ],
            },
            Object {
              "name": "power",
              "type": Array [
                "int",
                "null",
              ],
            },
          ],
          "name": "SupermodelIoFactoryPartsEngine",
          "type": "record",
        },
        "null",
      ],
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs works with nested ref objects 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": Array [
        Object {
          "fields": Array [
            Object {
              "name": "name",
              "type": Array [
                "string",
                "null",
              ],
            },
          ],
          "name": "SupermodelIoFactoryManufacturer",
          "type": "record",
        },
        "null",
      ],
    },
    Object {
      "name": "type",
      "type": Array [
        "string",
        "null",
      ],
    },
    Object {
      "name": "weight",
      "type": Array [
        "int",
        "null",
      ],
    },
    Object {
      "name": "length",
      "type": Array [
        "float",
        "null",
      ],
    },
    Object {
      "name": "available",
      "type": Array [
        "boolean",
        "null",
      ],
    },
    Object {
      "name": "engine",
      "type": Array [
        Object {
          "fields": Array [
            Object {
              "name": "volume",
              "type": Array [
                "float",
                "null",
              ],
            },
            Object {
              "name": "power",
              "type": Array [
                "int",
                "null",
              ],
            },
            Object {
              "name": "manufacturer",
              "type": Array [
                "SupermodelIoFactoryManufacturer",
                "null",
              ],
            },
          ],
          "name": "SupermodelIoFactoryPartsEngine",
          "type": "record",
        },
        "null",
      ],
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro simple type 1`] = `
Object {
  "doc": "Order model description",
  "fields": Array [
    Object {
      "name": "timestamp",
      "type": Array [
        "string",
        "null",
      ],
    },
  ],
  "name": "SupermodelIoDavidOrder",
  "namespace": "io.supermodel.david",
  "type": "record",
}
`;
